src/test/ui/issue-85713-align-with-no-arg.rs
#[repr(align)]
//~^ ERROR unrecognized representation hint
//~| ERROR unrecognized representation hint
pub struct Foo;

pub fn main() {  }
